@@ -19,6 +19,11 @@ reservation.completeExtern = *Per il tuo numero di persone non è possibile pren
 reservation.completeIntern = *Per il tuo numero di persone non è possibile prenotare internamente per questo giorno, siamo al completo
 
 #FORM CAMBIO PASSWORD
-password.old.invalid=La vecchia password non è corretta
-password.same=La nuova password coincide con la vecchia
-password.confirmation.mismatch=Le nuove password non coincidono
+password.old.invalid=*La vecchia password non è corretta
+password.same=*La nuova password coincide con la vecchia
+password.confirmation.mismatch=*Le nuove password non coincidono
+
+#AGGIUNTA PIATTO
+menuItem.duplicato=*Piatto già inserito
+NotBlank.menuItem.name=*Il nome del piatto è obbligatorio
+NotBlank.menuItem.description=*La descrizione del piatto è obbligatoria
