@@ -1,3 +1,7 @@
+* [F - 22/07/2025]: Changelog.txt : 
+    - Implementata validazione dati inserimento piatto nel menu, unico controllo, il piatto è uguale se ha 
+        stesso nome e stesso pasto(pranzo/cena)
+
 * [F - 21/07/2025]: Changelog.txt : 
     - Implementata logica per aggiungere piatti(MenuItem) al menu e rimuovere l'intero menu(Pranzo o Cena)
 
